--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -14,3 +14,6 @@ services:
         command: 'zabbix_client:lock'
         # not required, defaults to false
         hidden: false
+
+  WapplerSystems\ZabbixClient\Controller\ConfigurationController:
+    public: true
